Improve Auth (Password Reset + Token Refresh & Logout)
